# video_app

./: .gitignore  CMakeLists.txt  README
doc/: description.docx
embb_src/mtapi_plugins_c/mtapi_opencl_c/include/embb/mtapi/c/: mtapi_opencl.h
ffmpeg/: README.txt
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
video_app/: main.cpp
video_app/include/: output_video_builder.h
